# infa

./: .gitignore  Cargo.toml  README.md  test.py
infa/: Cargo.toml
infa-core/: Cargo.toml
infa-core/src/: lib.rs  main.rs  ops.rs
infa-cuda-bindings/: Cargo.toml  build.rs  wrapper.h
infa-cuda-bindings/kernels/: bf16.cu  f32.cu  kernel.cu
infa-cuda-bindings/src/: bf16.rs  container.rs  f32.rs  lib.rs  util.rs
infa-gguf/: Cargo.toml
infa-gguf/src/: error.rs
infa-gguf/src/parser/: mod.rs  quant_block_utils.rs  quant_blocks.rs  tensor.rs  typing.rs
infa-impl/: Cargo.toml
infa-impl/src/: float32.rs  lib.rs
infa-nn/: Cargo.toml
infa-nn/src/: lib.rs
infa-nn/src/functional/: gelu.rs  log_softmax.rs  mod.rs  relu.rs  silu.rs  softmax.rs
infa-nn/src/module/: layer_norm.rs  linear.rs  mod.rs
infa-safetensors/: Cargo.toml
infa-safetensors/src/: error.rs  lib.rs  main.rs
infa-safetensors/src/parser/: mod.rs
infa/src/: error.rs  lib.rs  main.rs
pureinfer-gguf/: Cargo.toml
pureinfer-gguf/src/: error.rs  lib.rs  main.rs
pureinfer-gguf/src/filename/: mod.rs  re.txt
pureinfer-gguf/src/parser/: mod.rs  quant_blocks.rs  typing.rs
scripts/: publish.sh
