[package]
name = "infa-cuda-bindings"
edition = "2021"
version.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
half.workspace = true
infa-core.path = "../infa-core"

[build-dependencies]
bindgen.workspace = true