[package]
name = "infa"
edition = "2021"
version.workspace = true

[dependencies]
infa-nn = { path = "../infa-nn" }
infa-core = { path = "../infa-core", default-features = false }
infa-gguf = { path = "../infa-gguf", optional = true }
infa-impl = { path = "../infa-impl" }
thiserror.workspace = true
rand.workspace = true

[features]
default = ["gguf"]
gguf = ["dep:infa-gguf", "infa-core/gguf"]